# schf-core

./: .env.example  .gitignore  .gitleaksignore  .hadolint.yaml  CHANGELOG.md  CHANGELOG_v1.1.0.md  CHANGELOG_v1.3.0.md  Dockerfile.k6  README.md  docker-compose.yml  setup.bat  start-server.bat
backend/: Dockerfile  artisan  check_app_config.php  check_basepath.php  check_bom.php  check_db_config.php  check_env_bom.php  composer.json  debug_env.php  debug_env10.php  debug_env11.php  debug_env12.php  debug_env13.php  debug_env2.php  debug_env3.php  debug_env4.php  debug_env5.php  debug_env6.php  debug_env7.php  debug_env8.php  debug_env9.php  debug_php_input.php  debug_request.php  pest.php  phpstan.neon  phpunit.xml  schf  test_controller.php  test_env.php  test_request.php
docs/: ADMIN_ACCESS_REPORT.md  BACKUP_POLICY.md  BACKUP_SECURITY_REPORT.md  BUILD.md  DATABASE_PERFORMANCE_REPORT.md  DEPLOY_GUIDE.md  E2E_REPORT.md  EXECUTABLE_VALIDATION_REPORT.md  EXPORT_FEATURE_REPORT.md  EXTERNAL_STORAGE_REPORT.md  FEATURE_FLAGS.md  GO_LIVE_REPORT.md  INSTALLATION_GUIDE.md  LOGIN_VALIDATION_REPORT.md  MANUAL_QA_REPORT.md  MIGRATION_BUNDLE_IMPORT.md  ORGANIZATIONS.md  QUEUE_VALIDATION_REPORT.md  RESTORE_VALIDATION_REPORT.md  SCHEMA_V1.md  SECURITY_AUDIT.md  SETUP_WIZARD.md  SMOKE_TESTS.md  TEST_MATRIX.md  TEST_PLAN.md  TEST_REPORT.md  USER_GUIDE.md
frontend/: .eslintrc.json  index.html  (+5 more)
frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: README.md
frontend/src-tauri/src/: lib.rs  main.rs
(+409 files in other folders)
