[package]
name = "schf-core"
version = "0.1.0"
description = "Sistema Financeiro - SCHF"
authors = ["ENIAC - JAschen"]
edition = "2021"

[lib]
name = "schf_core_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

